--- a/views/footer.html
+++ b/views/footer.html
@@ -73,7 +73,7 @@
                     <ul class="nav nav-pills">
                         <li><a href="#/disclaimer">Disclaimer</a>
                         </li>
-                        <li><a href="#">Sitemap</a>
+                        <li><a href="#/sitemap">Sitemap</a>
                         </li>
                         <li><a href="#/terms">Terms of Use</a>
                         </li>
